<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/search"
    tools:context=".SearchActivity">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView8"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="10dp"
            android:textSize="18dp"
            android:ems="10"
            android:hint="city"
            android:inputType="text|textPersonName" />

        <Button
            android:id="@+id/search_new"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorbtn"
            android:onClick="searchnew"
            android:text="@string/search_new" />

        <Button
            android:id="@+id/search_weather"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorbtn"
            android:onClick="search"
            android:text="@string/search_weather" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_of_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/city"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/search_climate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/climate2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/search_climate1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/climate1"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>