<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mydaily"
    tools:context=".MyDailyActivity">

    <TextView
        android:id="@+id/day_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/day_title"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/day_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/day_main"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/day_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/day_main"
        android:layout_alignLeft="@+id/day_main"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="168dp"
        android:text="@string/day_date"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/day_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/day_main"
        android:layout_alignLeft="@+id/day_main"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="243dp"
        android:text="@string/day_detail"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/add_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_date"
        android:layout_alignLeft="@+id/add_date"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="89dp"
        android:ems="10"
        android:hint="本条日志主题"
        android:inputType="textPersonName"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/add_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:ems="10"
        android:hint="2000.1.1 格式"
        android:inputType="date"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/add_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:ems="10"
        android:hint="记录内容"
        android:inputType="text|date"
        android:textSize="18dp" />

    <Button
        android:id="@+id/day_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginBottom="66dp"
        android:background="@color/colorbtn"
        android:onClick="onSave"
        android:text="@string/day_save" />

    <Button
        android:id="@+id/day_look"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/day_save"
        android:layout_alignLeft="@+id/day_save"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginBottom="67dp"
        android:background="@color/colorbtn"
        android:onClick="onLook"
        android:text="查看日志" />


</RelativeLayout>